--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "gh-pages": "^6.3.0",
     "svelte": "^5.28.1",
     "vite": "^6.3.5"
+  },
+  "dependencies": {
+    "d3": "^7.9.0",
+    "topojson-client": "^3.1.0"
   }
 }
